Fixed Firefox ugly ass fucking scrollbars. Less ugly but still ugly.

--- a/web/themes/afrikaburn/assets/css/temp.css
+++ b/web/themes/afrikaburn/assets/css/temp.css
@@ -327,15 +327,21 @@ div.body-content .block .view-id-collective_projects table td.name .flag-mute.ac
   color: #533;
 }
 
+/* scrollbars */
 
-.block *::-webkit-scrollbar{
+.block .content{
+  scrollbar-color: #F18F08 transparent;
+  scrollbar-width: thin;
+}
+
+.block .content::-webkit-scrollbar{
   width: 10px;
   background-image: linear-gradient(to right, transparent 30%, #F18F08, transparent 70%);
   border-radius: 5px;
   overflow: visible;
 }
 
-.block *::-webkit-scrollbar-thumb{
+.block .content::-webkit-scrollbar-thumb{
   background-color: #F18F08;
   border-radius: 5px;
 }
